fix(UU): Make hrefs more contrasty.

--- a/docs/material_theme_stylesheet_overrides/uu.css
+++ b/docs/material_theme_stylesheet_overrides/uu.css
@@ -10,6 +10,5 @@
 }
 
 a {
-  color: inherit;
   text-decoration: underline;
 }
